--- a/ibm-gitops-pre-deploy.yml
+++ b/ibm-gitops-pre-deploy.yml
@@ -35,7 +35,7 @@ steps:
     - task: CmdLine@2
       displayName: 'Login ArgoCD' 
       inputs:
-        script: 'argocd login $(argoServer) --username $(argoUser) --password $(argoPass) --grpc-web'
+        script: 'argocd login $(argoServer) --username $(argoUser) --password $(argoPass) --grpc-web --insecure'
     - task: CmdLine@2
       displayName: 'Set Params of secret in Configuration-IS'
       inputs:
