--- a/gitops-manifest/integration-server/values.yaml
+++ b/gitops-manifest/integration-server/values.yaml
@@ -4,7 +4,7 @@
 
 metadata:
   name: ace-custom-bar-gitops-helm
-  namespace: devops-service
+  namespace: my-cp4i
 
 spec:
   license: L-KSBM-C87FU2
