--- a/gitops-manifest/integration-server/values.yaml
+++ b/gitops-manifest/integration-server/values.yaml
@@ -3,14 +3,14 @@
 # Declare variables to be passed into your templates.
 
 metadata:
-  name: ace-custom-bar-gitops-helm
+  name: ace-bar-gitops
   namespace: my-cp4i
 
 spec:
-  license: L-APEH-C49KZH
+  license: L-APEH-CJUCNR
   use: CloudPakForIntegrationNonProduction
 
-version: '12.0.1.0-r4'
+version: '12.0.7.0-r2'
 barURL: 'https://josselynhd.jfrog.io/artifactory/example-repo-local/ICEDemo.bar'
 
 configuration:
