--- a/gitops-manifest/integration-server/templates/integration-server.yaml
+++ b/gitops-manifest/integration-server/templates/integration-server.yaml
@@ -4,7 +4,6 @@ metadata:
   name: {{ .Values.metadata.name }}
   namespace: {{ .Values.metadata.namespace }}
 spec:
-  disableRoutes: true
   adminServerSecure: true
   createDashboardUsers: true
   designerFlowsOperationMode: disabled
@@ -19,17 +18,18 @@ spec:
         resources:
           limits:
             cpu: 300m
-            memory: 350Mi
+            memory: 368Mi
           requests:
             cpu: 300m
-            memory: 300Mi
+            memory: 368Mi
   replicas: 1
   router:
     timeout: 120s
   service:
     endpointType: http
   version: {{ .Values.version }}
-  barURL: {{ .Values.barURL }}
+  barURL: >-
+    {{ .Values.barURL }}
   configurations:
     - {{ .Values.configuration.credentials }}
     - {{ .Values.configuration.policy }}
