--- a/gitops-manifest/integration-server/values.yaml
+++ b/gitops-manifest/integration-server/values.yaml
@@ -10,7 +10,7 @@ spec:
   license: L-APEH-CJUCNR
   use: CloudPakForIntegrationNonProduction
 
-version: '12.0'
+version: '12.0.7.0-r2'
 barURL: https://josselynhd.jfrog.io/artifactory/example-repo-local/api.bar
 
 configuration:
