--- a/gitops-manifest/integration-server/values.yaml
+++ b/gitops-manifest/integration-server/values.yaml
@@ -7,10 +7,10 @@ metadata:
   namespace: my-cp4i
 
 spec:
-  license: L-APEH-CJUCNR
+  license: L-MJTK-WUU8HE
   use: CloudPakForIntegrationNonProduction
 
-version: '12.0.7.0-r2'
+version: '12.0.8.0-r1'
 barURL: https://josselynhd.jfrog.io/artifactory/example-repo-local/api.bar
 
 configuration:
